@@ -1,28 +1,25 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'io.freefair.lombok' version '5.3.0'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 group 'net.intcoder'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 15
 
+mainClassName = 'net.intcoder.tbravocalc.TCalculator'
+
 repositories {
+    jcenter()
     mavenCentral()
-}
-
-jar {
-    manifest {
-        attributes "Main-Class": "net.intcoder.tbravocalc.TCalculator"
-    }
-
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
 }
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'commons-io:commons-io:2.8.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
@@ -31,4 +28,17 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
